# dialog-keeper

./: .cursorrules  .dockerignore  .env.example  .gitignore  AUTHORS.md  Dockerfile  Makefile  QUICKSTART.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: README.md  mts-pbx-integration.md  n8n-integration.md  philosophy.md  technical-specification.md  technology-stack.md
docs/architecture/: overview.md
docs/development/: CODE_REVIEW_GUIDE.md  CODING_STANDARDS.md  CONTRIBUTING.md  README.md
docs/integrations/: README.md
n8n/: README.md
src/: __init__.py  main.py
src/ai/: README.md
src/bot/: README.md
src/database/: README.md
src/integrations/: README.md
tests/: README.md
